--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -44,7 +44,7 @@
   </item>
   <item
       android:id="@+id/menu_add"
-      android:icon="@drawable/ic_action_add"
+      android:icon="@drawable/ic_action_add2"
       android:onClick="onAdd"
       app:showAsAction="always"
       android:title="" />
