--- a/app/src/main/res/layout/groupview_item.xml
+++ b/app/src/main/res/layout/groupview_item.xml
@@ -33,6 +33,17 @@
       />
 
   <TextView
+      android:id="@+id/groupItemStats"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:layout_margin="4dp"
+      app:layout_constraintEnd_toEndOf="@+id/guideline3"
+      app:layout_constraintStart_toEndOf="@+id/guideline2"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
+  <TextView
       android:id="@+id/textViewGroupDelete"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -41,7 +52,7 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.8"
-      app:layout_constraintStart_toStartOf="@+id/guideline2"
+      app:layout_constraintStart_toStartOf="@+id/guideline3"
       app:layout_constraintTop_toTopOf="parent"
       />
 
@@ -55,6 +66,14 @@
 
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_percent="0.75"
+      />
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
