moved export to settings

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -50,6 +50,11 @@
     -->
 
     <Preference
+        app:key="export_list"
+        app:summary="@string/export_list_desc"
+        app:title="@string/export_list" />
+
+    <Preference
         app:key="delete_all"
         app:summary="@string/delete_all_desc"
         app:title="@string/delete_all_title" />
