--- a/app/src/main/res/layout/summarygroup_item.xml
+++ b/app/src/main/res/layout/summarygroup_item.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="4dp"
     android:background="@color/backgroundListColor"
     >
 
@@ -69,7 +70,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.53"
+      app:layout_constraintGuide_percent="0.55"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
