--- a/app/src/main/res/layout/activity_stock.xml
+++ b/app/src/main/res/layout/activity_stock.xml
@@ -1,481 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<!-- Copyright 2017 Google Inc.
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License. -->
+
+<!-- Uses the Empty Activity Template.
+Want to minimize unrelated busy work where students just remove code.
+So, we are leaving the template code in. -->
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
-
-  <androidx.core.widget.NestedScrollView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:scrollbars="vertical"
-      >
+    android:layout_height="match_parent"
+    tools:context=".StockDataActivity">
 
   <LinearLayout
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      >
+      android:layout_height="match_parent"
+      android:orientation="vertical">
 
-    <LinearLayout
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        >
-
-      <TextView
-          android:id="@+id/textViewSymbol"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_weight="0.3"
-          android:textSize="24sp"
-          style="@style/stock_item_text"
-          />
-
-      <TextView
-          android:id="@+id/textViewMarketPrice"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_weight="0.7"
-          android:gravity="right"
-          style="@style/stock_item_text"
-          />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        >
-
-      <TextView
-          android:id="@+id/textViewName"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_weight="0.7"
-          android:textSize="13sp"
-          style="@style/stock_item_text"
-          />
-
-      <TextView
-          android:id="@+id/textViewChange"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_weight="0.3"
-          android:gravity="end"
-          android:textSize="13sp"
-          style="@style/stock_item_text"
-          />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textViewRange"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        style="@style/stock_item_text"
         />
 
-    <FrameLayout
-        android:id="@+id/graph_container"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/stockViewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginRight="4dp"
-        android:layout_marginLeft="4dp"
-        >
-
-      <com.github.mikephil.charting.charts.CandleStickChart
-          android:id="@+id/candleStickChart"
-          android:layout_width="match_parent"
-          android:layout_height="250dp"
-          android:visibility="gone"
-          />
-
-      <com.github.mikephil.charting.charts.LineChart
-          android:id="@+id/lineChart"
-          android:layout_width="match_parent"
-          android:layout_height="250dp"
-          android:visibility="gone"
-          />
-
-    </FrameLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-
-      <Button
-          android:id="@+id/buttonOneDay"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="16dp"
-          android:layout_marginRight="8dp"
-          android:text="1D"
-          style="@style/stock_item_button"
-          />
-
-      <Button
-          android:id="@+id/buttonFiveDays"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginRight="8dp"
-          android:text="5D"
-          style="@style/stock_item_button"
-          />
-
-      <Button
-          android:id="@+id/buttonOneMonth"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="1M"
-          style="@style/stock_item_button"
-          />
-
-      <Button
-          android:id="@+id/buttonThreeMonth"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="3M"
-          style="@style/stock_item_button"
-          />
-
-      <Button
-          android:id="@+id/buttonYTD"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="YTD"
-          style="@style/stock_item_button"
-          />
-
-      <Button
-          android:id="@+id/buttonOneYear"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="1Y"
-          style="@style/stock_item_button"
-          />
-
-      <Button
-          android:id="@+id/buttonFiveYears"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="5Y"
-          style="@style/stock_item_button"
-          />
-
-      <Button
-          android:id="@+id/buttonMax"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Max"
-          style="@style/stock_item_button"
-          />
-
-      <ImageButton
-          android:id="@+id/imageButtonIconLine"
-          android:src="@drawable/ic_candlegraph"
-          android:visibility="gone"
-          style="@style/stock_item_imagebutton"
-          />
-
-      <ImageButton
-          android:id="@+id/imageButtonIconCandle"
-          android:src="@drawable/ic_linegraph"
-          android:visibility="gone"
-          style="@style/stock_item_imagebutton"
-          />
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/onlineDataView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        tools:listitem="@layout/onlinedataview_item"
-        />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        >
-
-    </LinearLayout>
-
-    <View style="@style/Divider"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/group_header"
-        style="@style/section_header"
-        />
-
-    <LinearLayout
-        android:id="@+id/linearLayoutGroup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="16dp"
-        >
-
-      <TextView
-          android:id="@+id/textViewGroupColor"
-          android:layout_width="20dp"
-          android:layout_height="60dp"
-          android:background="@drawable/group_item_bg"
-          android:textSize="13sp"
-          android:gravity="center_horizontal|center_vertical"
-          />
-      <TextView
-          android:id="@+id/textViewGroup"
-          android:layout_width="200dp"
-          android:layout_height="60dp"
-          android:background="@drawable/stock_item_bg"
-          android:textSize="13sp"
-          android:gravity="center_horizontal|center_vertical"
-          />
-
-    </LinearLayout>
-
-    <View style="@style/Divider"/>
-
-    <TextView
-        android:id="@+id/assetsViewHeadline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/current_assets"
-        style="@style/section_header"
-        />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:gravity="end"
-        >
-
-      <ImageButton
-          android:id="@+id/addAssetsButton"
-          android:src="@drawable/ic_action_add_circle_outline"
-          style="@style/asset_item_imagebutton"
-          />
-
-      <ImageButton
-          android:id="@+id/removeAssetButton"
-          android:src="@drawable/ic_action_remove_circle_outline"
-          style="@style/asset_item_imagebutton"
-          />
-
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/assetsView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
-        tools:listitem="@layout/assetview_item"
-        />
-
-    <View style="@style/Divider"/>
-
-    <TextView
-        android:id="@+id/eventsViewHeadline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/current_events"
-        style="@style/section_header"
-        />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:gravity="end"
-        >
-
-      <ImageButton
-          android:id="@+id/addEventsButton"
-          android:src="@drawable/ic_action_event_note"
-          style="@style/asset_item_imagebutton"
-          />
-
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/eventsView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
-        tools:listitem="@layout/eventview_item"
-        />
-
-    <View style="@style/Divider"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/alerts"
-        style="@style/section_header"
-        />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="16dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        >
-
-      <TextView
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_vertical"
-          android:layout_weight="0.4"
-          android:text="@string/alert_above"
-          />
-
-      <ImageView
-          android:src="@drawable/ic_action_trending_up"
-          style="@style/alert_item_imagebutton"
-          />
-
-      <com.google.android.material.textfield.TextInputLayout
-          android:id="@+id/alertAboveInputLayout"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_vertical|end"
-          android:layout_weight="0.6"
-          app:endIconMode="clear_text"
-          >
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/alertAboveInputEditText"
-            android:background="@color/design_default_color_background"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:inputType="numberDecimal"
-            android:digits="0123456789.,"
-            android:imeOptions="actionDone"
-            android:maxLength="9"
-            android:maxLines="1"
-            android:textAlignment="textEnd"
-            />
-      </com.google.android.material.textfield.TextInputLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="16dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        >
-
-      <TextView
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_vertical"
-          android:layout_weight="0.4"
-          android:text="@string/alert_below"
-          />
-
-      <ImageView
-          android:src="@drawable/ic_action_trending_down"
-          style="@style/alert_item_imagebutton"
-          />
-
-      <com.google.android.material.textfield.TextInputLayout
-          android:id="@+id/alertBelowInputLayout"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_vertical|end"
-          android:layout_weight="0.6"
-          app:endIconMode="clear_text"
-          >
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/alertBelowInputEditText"
-            android:background="@color/design_default_color_background"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:inputType="numberDecimal"
-            android:digits="0123456789.,"
-            android:imeOptions="actionDone"
-            android:maxLength="9"
-            android:maxLines="1"
-            android:textAlignment="textEnd"
-            />
-      </com.google.android.material.textfield.TextInputLayout>
-
-    </LinearLayout>
-
-    <View style="@style/Divider"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/notes"
-        style="@style/section_header"
-        />
-
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="horizontal"
-          android:layout_marginLeft="16dp"
-          android:layout_marginRight="16dp"
-          android:gravity="end"
-          >
-        <ImageButton
-            android:id="@+id/updateNotesButton"
-            android:src="@drawable/ic_action_note_add"
-            style="@style/asset_item_imagebutton"
-            android:tooltipText="@string/update_notes"
-            />
-      </LinearLayout>
-
-      <TextView
-          android:id="@+id/notesTextView"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_margin="16dp"
-          android:padding="4dp"
-          android:background="@drawable/note_bg"
-          />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
   </LinearLayout>
 
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
