--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,7 +35,7 @@ limitations under the License. -->
         <item name="android:padding">4dp</item>
         <item name="android:minHeight">0dp</item>
         <item name="android:minWidth">0dp</item>
-        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
     </style>
 
     <style name="stock_item_imagebutton">
@@ -46,9 +46,8 @@ limitations under the License. -->
         <item name="android:background">@drawable/roundcorner</item>
         <item name="android:tint">@color/buttonLabel</item>
         <item name="android:scaleType">centerInside</item>
-        <item name="android:layout_marginLeft">8dp</item>
         <item name="android:layout_marginStart">8dp</item>
-        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
     </style>
     <style name="asset_item_imagebutton">
         <item name="android:layout_width">40dp</item>
