added yahoo news

--- a/app/src/main/res/layout/fragment_googlenews.xml
+++ b/app/src/main/res/layout/fragment_googlenews.xml
@@ -8,10 +8,10 @@
     >
 
   <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/recyclerview_item"
-        android:padding="@dimen/small_padding" />
+      android:id="@+id/googlenewsRecyclerview"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      tools:listitem="@layout/newsview_item"
+      />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
