--- a/app/src/main/res/layout/fragment_summarylist.xml
+++ b/app/src/main/res/layout/fragment_summarylist.xml
@@ -1,33 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SummaryListFragment"
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp"
+    xmlns:tools="http://schemas.android.com/tools"
     >
 
-  <androidx.core.widget.NestedScrollView
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/summaryList"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:scrollbars="vertical"
-      >
+      android:layout_margin="4dp"
+      tools:listitem="@layout/summarylist_item"
+      />
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      >
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/summaryList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        tools:listitem="@layout/summarylist_item"
-        />
-
-  </LinearLayout>
-
-  </androidx.core.widget.NestedScrollView>
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
