--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -11,7 +11,7 @@
       android:id="@+id/yahoonewsRecyclerview"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      tools:listitem="@layout/newsview_item"
+      tools:listitem="@layout/yahoonewsview_item"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
