--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -78,6 +78,15 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/textViewAssetChange"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        />
+
+    <TextView
         android:id="@+id/textViewRange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
