--- a/app/src/main/res/layout/googlenewsview_item.xml
+++ b/app/src/main/res/layout/googlenewsview_item.xml
@@ -9,7 +9,7 @@
     >
 
   <TextView
-      android:id="@+id/newsItemTitle"
+      android:id="@+id/googleNewsItemTitle"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_margin="4dp"
@@ -19,8 +19,9 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       />
+
   <TextView
-      android:id="@+id/newsItemDate"
+      android:id="@+id/googleNewsItemDate"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_marginTop="4dp"
@@ -30,32 +31,20 @@
       android:textSize="10sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/newsItemTitle"
+      app:layout_constraintTop_toBottomOf="@+id/googleNewsItemTitle"
       />
+
   <TextView
-      android:id="@+id/newsItemLink"
-      android:layout_width="0dp"
-      android:layout_height="match_parent"
-      android:layout_marginTop="0dp"
-      android:layout_marginStart="4dp"
-      android:layout_marginEnd="4dp"
-      android:layout_marginBottom="4dp"
-      android:textSize="10sp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/newsItemDate"
-      />
-  <TextView
-      android:id="@+id/newsItemPreviewText"
+      android:id="@+id/googleNewsItemPreviewText"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_margin="4dp"
-      android:paddingStart="16dp"
-      android:paddingEnd="0dp"
+      android:paddingStart="12dp"
+      android:paddingEnd="12dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/newsItemLink"
+      app:layout_constraintTop_toBottomOf="@+id/googleNewsItemDate"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
