--- a/app/src/main/res/layout/fragment_summarygroup.xml
+++ b/app/src/main/res/layout/fragment_summarygroup.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/current_assets"
+        android:text="@string/current_portfolio_graph"
         style="@style/section_header"
         />
 
