--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -6,18 +6,24 @@
     <SwitchPreferenceCompat
         app:defaultValue="true"
         app:key="notifications"
-        app:title="@string/enable_notifications" />
+        app:title="@string/enable_notifications"
+        app:icon="@drawable/ic_action_notification"
+        />
 
     <SwitchPreferenceCompat
         app:defaultValue="true"
         app:key="postmarket"
         app:title="@string/use_postmarket"
-        app:summary="@string/use_postmarket_desc" />
+        app:summary="@string/use_postmarket_desc"
+        app:icon="@drawable/ic_action_postmarket"
+        />
 
     <Preference
         app:key="update_groups"
         app:summary="@string/update_groups_desc"
-        app:title="@string/update_groups_title" />
+        app:title="@string/update_groups_title"
+        app:icon="@drawable/ic_action_grouplist"
+        />
 
   </PreferenceCategory>
 
@@ -52,45 +58,52 @@
     <Preference
         app:key="export_list"
         app:summary="@string/export_list_desc"
-        app:title="@string/export_list" />
+        app:title="@string/export_list"
+        app:icon="@drawable/ic_action_export"
+        />
 
     <Preference
         app:key="delete_all"
         app:summary="@string/delete_all_desc"
-        app:title="@string/delete_all_title" />
+        app:title="@string/delete_all_title"
+        app:icon="@drawable/ic_action_delete_all"
+        />
 
   </PreferenceCategory>
 
   <PreferenceCategory app:title="@string/feedback_header">
     <Preference
-        app:key="feedback"
-        app:summary="Report technical issues or suggest new features"
-        app:title="Send feedback" />
-
-    <Preference
-        android:title="EMail feedback"
-        android:summary="summary_feedback">
+        android:title="@string/email_feedback_title"
+        android:summary="@string/email_feedback_summary"
+        app:icon="@drawable/ic_action_email"
+        >
       <intent
           android:action="android.intent.action.VIEW"
-          android:data="mailto:my@email.address">
+          android:data="mailto:jurgen@outlook.com">
         <extra
             android:name="android.intent.extra.SUBJECT"
-            android:value="Feedback"/>
+            android:value="StockRoom Feedback"/>
+<!--
         <extra
             android:name="android.intent.extra.TEXT"
-            android:value="Text of Feedback"/>
+            android:value="text"/>
+-->
       </intent>
     </Preference>
 
-    <PreferenceScreen android:title="website">
+    <PreferenceScreen
+        android:title="Donate"
+        android:layout="@layout/donate"
+        >
       <intent
           android:action="android.intent.action.VIEW"
-          android:data="http://www.example.com"
+          android:data="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=Y2XL22QFYPFXU&amp;source=url"
           />
     </PreferenceScreen>
 
   </PreferenceCategory>
 
+<!--
   <PreferenceCategory app:title="@string/other_header">
     <SwitchPreferenceCompat
         app:defaultValue="false"
@@ -99,5 +112,6 @@
         app:title="@string/debug_title" />
 
   </PreferenceCategory>
+-->
 
 </PreferenceScreen>
