--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@ limitations under the License. -->
     <color name="green">#32CD32</color>
     <color name="red">#DC143C</color>
     <color name="black">#000000</color>
+    <color name="settingsblue">#33B5E5</color>
+
 </resources>
