--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -3,7 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
-      android:onClick="onSettings"
+      android:onClick="onSettings1"
       app:showAsAction="always"
+      android:title="" />
+  <item
+      android:onClick="onSettings2"
+      app:showAsAction="always"
+      android:enabled="false"
       android:title="" />
 </menu>
