--- a/app/src/main/res/layout/summarylist_item.xml
+++ b/app/src/main/res/layout/summarylist_item.xml
@@ -25,7 +25,8 @@
       android:id="@+id/summaryListItemSymbol"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_margin="2dp"
+      android:layout_marginStart="4dp"
+      android:layout_marginEnd="2dp"
       android:textStyle="bold"
       app:layout_constraintEnd_toStartOf="@+id/summaryListItemMarketPrice"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
@@ -35,8 +36,9 @@
   <TextView
       android:id="@+id/summaryListItemMarketPrice"
       android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:layout_margin="2dp"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="2dp"
+      android:layout_marginEnd="2dp"
       android:gravity="end"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/summaryListItemSymbol"
@@ -47,38 +49,43 @@
       android:id="@+id/summaryListItemMarketChange"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginStart="2dp"
+      android:layout_marginStart="4dp"
       android:layout_marginEnd="2dp"
       android:textSize="11sp"
-      android:gravity="end"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="1"
+      app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintTop_toBottomOf="@+id/summaryListItemMarketPrice"
       />
   <TextView
       android:id="@+id/summaryListItemCapital"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginStart="2dp"
+      android:layout_marginStart="4dp"
       android:layout_marginEnd="2dp"
       android:textSize="11sp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/guideline1"
+      app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintTop_toBottomOf="@+id/summaryListItemMarketChange"
       />
+
   <TextView
       android:id="@+id/summaryListItemAssetChange"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginStart="2dp"
       android:layout_marginEnd="2dp"
-      android:textSize="11sp"
+      android:layout_marginStart="4dp"
+      android:layout_marginBottom="2dp"
       android:gravity="end"
+      android:textSize="11sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintTop_toBottomOf="@+id/summaryListItemCapital"
+      app:layout_constraintVertical_bias="1.0"
       />
-
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline1"
       android:layout_width="wrap_content"
