--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -345,6 +345,12 @@
         >
 
       <ImageButton
+          android:id="@+id/splitAssetsButton"
+          android:src="@drawable/ic_action_split"
+          style="@style/asset_item_imagebutton"
+          />
+
+      <ImageButton
           android:id="@+id/addAssetsButton"
           android:src="@drawable/ic_action_add_circle_outline"
           style="@style/asset_item_imagebutton"
