--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -26,7 +26,9 @@
       android:id="@+id/item_summary1"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:padding="4dp"
+      android:paddingStart="4dp"
+      android:paddingEnd="4dp"
+      android:paddingBottom="4dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/guideline2"
       app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -67,14 +69,15 @@
         app:layout_constraintVertical_bias="0.0"
         />
 
-
   </androidx.constraintlayout.widget.ConstraintLayout>
 
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/item_summary2"
       android:layout_width="0dp"
       android:layout_height="0dp"
-      android:padding="4dp"
+      android:paddingStart="4dp"
+      android:paddingEnd="4dp"
+      android:paddingBottom="4dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline2"
@@ -123,4 +126,5 @@
       android:orientation="vertical"
       app:layout_constraintGuide_percent="0.75"
       />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
