--- a/app/src/main/res/layout/activity_updategroup.xml
+++ b/app/src/main/res/layout/activity_updategroup.xml
@@ -30,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:gravity="end"
