--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -7,6 +7,7 @@
         app:defaultValue="true"
         app:key="notifications"
         app:title="@string/enable_notifications"
+        app:summary="@string/enable_notifications_desc"
         app:icon="@drawable/ic_action_notification"
         />
 
