--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -123,14 +123,14 @@
         android:layout_marginEnd="4dp"
         >
 
-      <com.github.mikephil.charting.charts.CandleStickChart
+      <com.thecloudsite.stockroom.CustomCandleStickChart
           android:id="@+id/candleStickChart"
           android:layout_width="match_parent"
           android:layout_height="250dp"
           android:visibility="gone"
           />
 
-      <com.github.mikephil.charting.charts.LineChart
+      <com.thecloudsite.stockroom.CustomLineChart
           android:id="@+id/lineChart"
           android:layout_width="match_parent"
           android:layout_height="250dp"
