--- a/app/src/main/res/layout/add_group.xml
+++ b/app/src/main/res/layout/add_group.xml
@@ -26,7 +26,7 @@
       app:layout_constraintBottom_toBottomOf="@+id/colorPicker"
       app:layout_constraintEnd_toStartOf="@+id/guideline1"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/addUpdateGroupsHeadline"
+      app:layout_constraintTop_toTopOf="@+id/colorPicker"
       />
 
   <com.larswerkman.holocolorpicker.ColorPicker
