--- a/app/src/main/res/layout/add_asset.xml
+++ b/app/src/main/res/layout/add_asset.xml
@@ -27,6 +27,7 @@
       app:layout_constraintEnd_toStartOf="@+id/guideline1"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/textInputLayout1"
+      app:layout_constraintHorizontal_bias="0.0"
       />
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayout1"
@@ -64,6 +65,7 @@
       app:layout_constraintEnd_toStartOf="@+id/guideline1"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
+      app:layout_constraintHorizontal_bias="0.0"
       />
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayout2"
