--- a/app/src/main/res/layout/add_event.xml
+++ b/app/src/main/res/layout/add_event.xml
@@ -37,6 +37,7 @@
           app:layout_constraintEnd_toStartOf="@+id/guideline1"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="@+id/textInputLayout1"
+          app:layout_constraintHorizontal_bias="0.0"
           />
 
       <com.google.android.material.textfield.TextInputLayout
@@ -65,6 +66,7 @@
           app:layout_constraintEnd_toStartOf="@+id/guideline1"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
+          app:layout_constraintHorizontal_bias="0.0"
           />
 
       <com.google.android.material.textfield.TextInputLayout
