--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,12 +5,12 @@
   <item
       android:id="@+id/menu_sync"
       android:icon="@drawable/ic_action_sync"
-      android:title=""
+      android:title="@string/menu_sync"
       app:showAsAction="always" />
 
   <item
       android:icon="@drawable/ic_action_sort"
-      android:title=""
+      android:title="@string/menu_sort"
       app:showAsAction="always">
 
     <!-- Starting the sort sub menu
@@ -52,13 +52,13 @@
   <item
       android:icon="@drawable/ic_action_add2"
       android:onClick="onAdd"
-      android:title=""
+      android:title="@string/title_activity_add"
       app:showAsAction="always" />
 
   <item
       android:icon="@drawable/ic_action_settings"
       android:onClick="onSettings"
-      android:title=""
+      android:title="@string/title_activity_settings"
       app:showAsAction="always" />
 
   <item
